--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,24 @@
         <link rel="stylesheet" href="{{ get_url(path='css/style.css') }}">
         <link rel="stylesheet" href="{{ get_url(path='css/custom.css') }}">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.css" integrity="sha384-5TcZemv2l/9On385z///+d7MSYlvIEw9FuZTIdZ14vJLqWphw7e7ZPuOiCHJcFCP" crossorigin="anonymous">
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/katex.min.js" integrity="sha384-cMkvdD8LoxVzGF/RPUKAcvmm49FQ0oxwDF3BGKtDXcEc+T1b2N+teh/OJfpU0jr6" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.22/dist/contrib/auto-render.min.js" integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh" crossorigin="anonymous"></script>
+        <script>
+         document.addEventListener("DOMContentLoaded", function() {
+             renderMathInElement(document.body, {
+                 // customised options
+                 // • auto-render specific keys, e.g.:
+                 delimiters: [
+                     {left: '$', right: '$', display: false},
+                     {left: '\\[', right: '\\]', display: true}
+                 ],
+                 // • rendering keys, e.g.:
+                 throwOnError : false
+             });
+         });
+        </script>
+
         <!-- Add favicon with appropriate sizes -->
         <link rel="icon" href="{{ config.base_url }}/{{ config.extra.favicon | default(value='favicon.ico') }}">
     </head>
@@ -34,10 +52,10 @@
             {% endfor %}
 
             <div class="theme-toggle" id="theme-toggle" role="button" tabindex="0" aria-label="Toggle theme"
-                data-icon-base="{{ get_url(path='icons.svg') }}"
-                data-icon-dark="#darkMode"
-                data-icon-light="#lightMode"
-                data-sound-src="{{ get_url(path='click.ogg') }}">
+                 data-icon-base="{{ get_url(path='icons.svg') }}"
+                 data-icon-dark="#darkMode"
+                 data-icon-light="#lightMode"
+                 data-sound-src="{{ get_url(path='click.ogg') }}">
                 <svg class="icon">
                     <use id="theme-icon"></use>
                 </svg>
